@@ -3,6 +3,11 @@ fidoconfig 0.10
 (released on Mon May 22 14:58:56 CEST 2000)
 
 ----- cvs ci ------
+Sun Jul  9 20:01:16 NOVST 2000
+max:
+* added ignoreSeen
+
+----- cvs ci ------
 Tue Jul  4 22:36:41 NOVST 2000
 max:
 * add -killsb to echoarea options
